--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Search</a>
                         <div class="dropdown-menu"><a class="dropdown-item" href="#">Book Search</a><a class="dropdown-item" href="#">Music Search</a><a class="dropdown-item" href="#">Movie Search</a></div>
                     </li>
-                </ul><a class="btn btn-primary ms-md-2" role="Sign-In" href="#">Button</a>
+                </ul><a class="btn btn-primary ms-md-2" role="Button" href="#">Sign-In</a>
             </div>
         </div>
     </nav>
