--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
     </nav>
-    <header class="d-flex masthead" style="background: url(&quot;assets/img/Lp.png&quot;);background-repeat: no-repeat;">
+    <header class="d-flex masthead" style="background: url(&quot;assets/img/Lp.png&quot;);background-repeat: no-repeat;background-size: cover;">
         <div class="container my-auto text-center">
             <h3 class="mb-5"></h3>
             <div class="overlay"></div>
