--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-md-6 col-lg-3 mb-5 mb-lg-0"><span class="mx-auto service-icon rounded-circle mb-3"><button class="btn btn-primary" type="button" style="background: rgb(252,252,252);color: rgb(0,0,0);border-width: 0px;"><i class="fa fa-tv" style="background: #00000000;width: 20px;height: 20px;font-size: 40px;padding-right: 43px;padding-bottom: 45px;border-color: var(--bs-body-color);color: var(--bs-blue);"></i></button></span>
                     <h4><strong>Movie Search</strong></h4>
-                    <p class="mb-0 text-faded">Boredom.....thing of past!</p>
+                    <p class="mb-0 text-faded">Boredom, a thing of past!</p>
                 </div>
                 <div class="col-md-6 col-lg-3 mb-5 mb-lg-0"><span class="mx-auto service-icon rounded-circle mb-3"><button class="btn btn-primary" type="button" style="background: rgb(252,252,252);color: rgb(0,0,0);border-width: 0px;padding-right: 14px;padding-bottom: 9px;"><i class="fas fa-book-open" style="background: #00000000;width: 20px;height: 20px;font-size: 40px;padding-right: 40px;padding-bottom: 40px;border-color: var(--bs-body-color);color: var(--bs-blue);"></i></button></span>
                     <h4><strong>Book Search</strong></h4>
