--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <p class="mb-0 text-faded">Boredom, a thing of past!</p>
                 </div>
                 <div class="col-md-6 col-lg-3 mb-5 mb-lg-0"><span class="mx-auto service-icon rounded-circle mb-3"><button class="btn btn-primary" type="button" style="background: rgb(252,252,252);color: rgb(0,0,0);border-width: 0px;padding-right: 14px;padding-bottom: 9px;"><i class="fas fa-book-open" style="background: #00000000;width: 20px;height: 20px;font-size: 40px;padding-right: 40px;padding-bottom: 40px;border-color: var(--bs-body-color);color: var(--bs-blue);"></i></button></span>
-                    <h4><strong>Book Search</strong></h4>
-                    <p class="mb-0 text-faded">Knowledge at your fingertips</p>
+                    <h4><strong>Anime Search</strong></h4>
+                    <p class="mb-0 text-faded">World of fantasies.</p>
                 </div>
                 <div class="col-md-6 col-lg-3 mb-5 mb-lg-0"><span class="mx-auto service-icon rounded-circle mb-3"><button class="btn btn-primary" type="button" style="background: rgb(254,254,254);border-width: 0px;padding-bottom: 12px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-spotify" style="width: 40px;height: 40px;color: var(--bs-blue);padding-bottom: 1px;padding-top: 0;">
                                 <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.669 11.538a.498.498 0 0 1-.686.165c-1.879-1.147-4.243-1.407-7.028-.77a.499.499 0 0 1-.222-.973c3.048-.696 5.662-.397 7.77.892a.5.5 0 0 1 .166.686zm.979-2.178a.624.624 0 0 1-.858.205c-2.15-1.321-5.428-1.704-7.972-.932a.625.625 0 0 1-.362-1.194c2.905-.881 6.517-.454 8.986 1.063a.624.624 0 0 1 .206.858zm.084-2.268C10.154 5.56 5.9 5.419 3.438 6.166a.748.748 0 1 1-.434-1.432c2.825-.857 7.523-.692 10.492 1.07a.747.747 0 1 1-.764 1.288z"></path>
